[tool.black]
line-length = 100

[tool.poetry]
name = "vpalette"
version = "2.0.1"
description = "Utility to easily use material design colors"
authors = ["Arnau Villoro <arnau@villoro.com>"]
maintainers = ["Arnau Villoro <arnau@villoro.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/villoro/vpalette"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.2"
pre-commit = "^2.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
