[tool.black]
line-length = 100

[tool.poetry]
name = "vpalette"
version = "2.1.0"
description = "Utility to easily use material design colors"
authors = ["Arnau Villoro <arnau@villoro.com>"]
maintainers = ["Arnau Villoro <arnau@villoro.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/villoro/vpalette"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.8.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pre-commit = "^3.2.2"
pytest = "^7.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
