[tool.black]
line-length = 100

[project]
name = "vpalette"
version = "3.1.0"
description = "Utility to easily use material design colors"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Arnau Villoro", email = "arnau@villoro.com" },
]
maintainers = [
    { name = "Arnau Villoro", email = "arnau@villoro.com" },
]
requires-python = ">=3.8"
dependencies = []
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
urls = { Repository = "https://github.com/villoro/vpalette" }

[dependency-groups]
dev = [
    "black>=23.3.0",
    "pre-commit>=3.2.2",
    "pytest>=7.2.2",
]

[tool.setuptools]
packages = ["vpalette"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
